# learn_c

./: README.md
GUI/: CMakeCache.txt  CMakeLists.txt  GUI  Makefile  cmake_install.cmake  hello.cpp  hello.h
GUI/include/: BaseScreen.h  MainScreen.h  MyApp.h  TransparentStaticText.h  global_settings.h
GUI/src/: BaseScreen.cpp  MainScreen.cpp  MyApp.cpp  TransparentStaticText.cpp
lesson1/: a.out  alighment.cpp  class_operator_default.cpp  constructor  constructor.cpp
